# file-fmt

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
src/: cli.rs  lib.rs  main.rs
