[package]
name = "file-fmt"
version = "0.1.0"
authors = ["Mason Ginter <mason@dagint.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.78"
clap = {version = "4.4.12", features = ["derive"]}
clap_generate = "3.0.3"
serde = "1.0.193"
serde_json = "1.0.108"
serde_yaml = "0.9.29"
toml = "0.8.8"

[build-dependencies]
clap = {version = "4.4.12", features = ["derive"]}
clap_complete = "4.4.5"
